<resources>
    <string name="app_name">Inventory App</string>
    <string name="widget_name">Widget Inventario</string>
    <string name="widget_description">Muestra el saldo general del inventario</string>
    <string name="logo_inventory">Logo de la aplicación Inventory</string>
    <string name="cuanto_tengo_de_inventario">¿Cuánto tengo de inventario?</string>
    <string name="ver_saldo">Ver saldo</string>
    <string name="inventory">Inventory</string>
    <string name="cuanto">$ ****</string>
    <string name="gestionar_inventario">Gestionar inventario</string>
    <string name="login_title">Inventory</string>
    <string name="huella_content_description">Ingresa tu huella</string>
    // Agregar Producto Strings
    <string name="title_agregar_producto">Agregar producto</string>
    <string name="hint_codigo_producto">Código producto</string>
    <string name="hint_nombre_articulo">Nombre artículo</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="button_guardar">Guardar</string>
    <string name="cerrar_sesion_description">Cerrar Sesion</string>
    <string name="add_product_description">Añadir producto</string>
    <string name="detail_product_title">Detalle del producto</string>
    <string name="cantidad_disponible">Cantidad disponible:</string>
    <string name="cantidad_disponible_placeholder">5</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_por_unidad">Precio por unidad:</string>
    <string name="precio_unidad_placeholder">$10.00</string>
    <string name="arrow_back_desc">volver atrás</string>
    <string name="id">Id:</string>
    <string name="_0000">0000</string>
    <string name="nombre_art_culo">Nombre artículo</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="editar">Editar</string>
    <string name="email_input">Email</string>
    <string name="password">Password</string>

    <string name="error_min_digits">Mínimo 6 dígitos</string>

</resources>