<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_semi_transparent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray_toolbar"
        android:paddingStart="50dp"
        android:paddingEnd="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Editar producto"
        app:titleTextColor="@color/white"
        />

    <ImageButton
        android:id="@+id/arrow_back_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_back"
        android:contentDescription="@string/arrow_back_desc"
        app:layout_constraintStart_toStartOf="@id/toolbar_edit"
        app:layout_constraintTop_toTopOf="@id/toolbar_edit"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_edit"
        android:backgroundTint="@color/gray_toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_product_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0000"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_art_culo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cantidad"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/orange"
                android:paddingVertical="12dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>